--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,15 @@
   "name": "polython17",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.3",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.1",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-progress-button": "Collaborne/paper-progress-button#^2.1.0",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.6"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
