--- a/bower.json
+++ b/bower.json
@@ -12,12 +12,16 @@
     "test",
     "tests"
   ],
-    "dependencies": {
-      "polymer": "Polymer/polymer#^2.2.0",
-      "polymerfire": "firebase/polymerfire#^2.2.1",
-      "paper-button": "PolymerElements/paper-button#^2.0.0",
-      "paper-input": "PolymerElements/paper-input#^2.0.3",
-      "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
-      "iron-icons": "PolymerElements/iron-icons#^2.0.1"
-    }
+  "dependencies": {
+    "polymer": "Polymer/polymer#^2.2.0",
+    "polymerfire": "firebase/polymerfire#^2.2.1",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.1",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.1",
+    "paper-progress-button": "Collaborne/paper-progress-button#^2.1.0",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0"
+  }
 }
