--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "default": "polython2017-bddab",
-    "damian": "polython2017-bddab"
+    "damian": "polython2017-bddab",
+    "axva": "polython2017-bddab"
   }
 }
