--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
     "paper-progress-button": "Collaborne/paper-progress-button#^2.1.0",
     "paper-toast": "PolymerElements/paper-toast#^2.0.0",
     "app-layout": "PolymerElements/app-layout#^2.0.4",
-    "paper-item": "PolymerElements/paper-item#^2.0.0"
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "app-route": "PolymerElements/app-route#^2.0.3",
+    "iron-pages": "PolymerElements/iron-pages#^2.0.0"
   }
 }
