--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "app-layout": "PolymerElements/app-layout#^2.0.4",
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.3",
-    "iron-pages": "PolymerElements/iron-pages#^2.0.0"
+    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0"
   }
 }
