--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,8 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.3",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
-    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0"
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "paper-avatar": "Abe90/paper-avatar#^1.0.4",
+    "paper-expansion-panel": "Collaborne/paper-expansion-panel#^2.0.0"
   }
 }
